--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -21,6 +21,8 @@
   --form-input-group-color: #{colors.$gray-700};
   --form-multivalue-background-color: #f2ecfd;
   --form-multivalue-text-color: #7c45ea;
+  --form-switch-background: #{colors.$gray-300};
+  --form-switch-background-active: #{colors.$purple};
 
   --alert-success-background: #d4edda;
   --alert-success-border-color: #c3e6cb;
@@ -64,6 +66,8 @@
   --form-input-group-color: #{colors.$gray6};
   --form-multivalue-background-color: #{colors.$highlight-purple-light};
   --form-multivalue-text-color: #{colors.$black};
+  --form-switch-background: #{colors.$gray-800};
+  --form-switch-background-active: #{colors.$highlight-purple};
 
   --alert-success-background: #{darken(#155724, 8%)};
   --alert-success-border-color: #{darken(#155724, 0%)};
