dark mode styles for differ, right rail section, dropdown, variation input

--- a/packages/front-end/components/Features/VariationsInput.module.scss
+++ b/packages/front-end/components/Features/VariationsInput.module.scss
@@ -2,7 +2,7 @@
 
 .variationSplitHeader {
   th {
-    background-color: #f3f3f3;
+    background-color: var(--table-row-hover-background-color);
   }
 }
 .colorMarker {
