--- a/packages/front-end/components/Dropdown/Dropdown.module.scss
+++ b/packages/front-end/components/Dropdown/Dropdown.module.scss
@@ -5,6 +5,7 @@
   background-color: rgba(255, 255, 255, 0.2);
 }
 .dropdownmenu {
-  background-color: #fff;
+  background-color: var(--surface-background-color);
+  color: var(--text-color-main);
   box-shadow: 0px 10px 10px rgba(6, 6, 71, 0.7);
 }
