--- a/packages/front-end/components/LoadingOverlay.module.scss
+++ b/packages/front-end/components/LoadingOverlay.module.scss
@@ -4,7 +4,7 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background: #fff;
+  background: var(--surface-background-color);
   opacity: 0.7;
   z-index: 995;
 }
