default to light in case of old browsers that dont support prefers-color-scheme media query

--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -116,6 +116,8 @@
 
 // OS default
 :root:not(.theme--light):not(.theme--dark) {
+  @include light-theme();
+
   @media (prefers-color-scheme: light) {
     @include light-theme();
   }
