fix dark theme for code folding section

--- a/packages/front-end/styles/_bootstrap-theme-overrides.scss
+++ b/packages/front-end/styles/_bootstrap-theme-overrides.scss
@@ -288,6 +288,10 @@ pre {
     background-color: var(--surface-background-color);
   }
 
+  [class*="-code-fold"] {
+    background-color: var(--surface-background-color);
+  }
+
   [class*="-diff-container"] {
     background-color: var(--surface-background-color);
   }
