update namespace background

--- a/packages/front-end/components/Features/NamespaceUsageGraph.module.scss
+++ b/packages/front-end/components/Features/NamespaceUsageGraph.module.scss
@@ -16,7 +16,7 @@
   background-color: $gray1;
 }
 .unused {
-  background-color: $light-green;
+  background-color: var(--alert-success-background);
 }
 
 .bar {
