574 - Support for Dark mode (#586)
* dark mode architecture support; top bar themeing

* table, text link, form styles for dark mode

* surface, form, multi-select colours

* alert colours

* style modals and list items

* getting started & navtabs styles

* card, gradient

* style single select

* toggle switch

* more dark mode

* dark mode styles for differ, right rail section, dropdown, variation input

* adjust hidden items

* WIP theme switcher

* refactor theme toggler component

* fix for strict do-not-track mode

* only show focus ring on keyboard focus, not mouse

* other differ

* ACE editor respects dark mode

* ACE editor cleanup

* fix dimension columns picker

* cleanup global.scss

* adjust more hidden colours

* fix visualization colours for dark mode

* visualizations draw colour

* change grid lines

* experiment date dimension graph lines

* fix visualization axes

* fix graph tooltips for graphs

* fix loading spinner in modal bg colour

* add triangle to show its togglable

* fix prisma theme strict mode crash

* AppearanceUIThemeProvider, useAppearanceUITheme(), <Code /> & <CodeTextarea /> use dynamic theme

* fix bugs w/ system theme in appearance theme provider

* default to light in case of old browsers that dont support prefers-color-scheme media query

* fix dark theme for code folding section

* update ExpandableDiff to use the targeted classname

* update namespace background

* improve placeholder image appearance

* namespace border improvements

* adjust prism themes: themes differ in font size, line-height, etc. so this makes it more consistent

* update icons

--- a/packages/front-end/components/Features/NamespaceUsageGraph.module.scss
+++ b/packages/front-end/components/Features/NamespaceUsageGraph.module.scss
@@ -2,7 +2,7 @@
 
 .legend {
   font-size: 0.8em;
-  color: $gray1;
+  color: var(--text-color-muted);
 }
 
 .legend_box {
@@ -10,13 +10,13 @@
   height: 14px;
   display: inline-block;
   vertical-align: middle;
-  border: 1px solid $gray3;
+  border: 1px solid var(--border-color-100);
 }
 .used {
   background-color: $gray1;
 }
 .unused {
-  background-color: $light-green;
+  background-color: var(--alert-success-background);
 }
 
 .bar {
@@ -27,7 +27,7 @@
 
 .bar_holder {
   position: relative;
-  border: 1px solid $gray3;
+  border: 1px solid var(--border-color-100);
   height: 30px;
   margin: 5px 0 30px 0;
   background-color: $gray1;
