--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -664,9 +664,14 @@ pre {
   }
   .form-side {
     background-color: var(--surface-background-color);
+    font-size: 0.875rem; //14px
     .formwrap {
       width: 100%;
       max-width: 500px;
+
+      label {
+        color: var(--form-input-group-color);
+      }
     }
   }
   h1,
