Fix formatting/alignment of JSON feature values and conditions, add Swift code to modals, fix disabled input styles

--- a/packages/front-end/styles/_bootstrap-theme-overrides.scss
+++ b/packages/front-end/styles/_bootstrap-theme-overrides.scss
@@ -38,12 +38,10 @@ pre {
 .form-control {
   border-color: var(--border-color-300);
 
-  &[readonly] {
+  &[readonly],
+  &:disabled {
     background-color: var(--surface-background-color-alt);
   }
-}
-
-.form-control:focus {
 }
 
 .input-group-text {
@@ -74,6 +72,11 @@ pre {
   [class$="-control"] {
     background-color: var(--surface-background-color);
     border-color: var(--border-color-300);
+
+    &[readonly],
+    &:disabled {
+      background-color: var(--surface-background-color-alt);
+    }
   }
 
   [class$="-multiValue"] {
