Added search to docs

--- a/docs/src/styles/custom.scss
+++ b/docs/src/styles/custom.scss
@@ -11,6 +11,7 @@
 @use './components/button-card';
 @use './components/pill';
 @use './components/toc';
+//@use './components/navbar';
 
 /* You can override the default Infima variables here. */
 :root {
