--- a/packages/front-end/components/Metrics/MetricToolTipBody.module.scss
+++ b/packages/front-end/components/Metrics/MetricToolTipBody.module.scss
@@ -1,19 +1,17 @@
 @import "../../styles/colors.scss";
 
-.description {
+.markdown {
   position: relative;
-  height: 100px;
+  max-height: 100px;
   overflow: hidden;
 }
 
-.description:after {
+.markdown:after {
   position: absolute;
   content: "";
   bottom: 0;
-  right: 0;
+  top: 40px;
   width: 100%;
-  height: 60px;
-  padding-top: 40px;
   background-image: linear-gradient(
     to bottom,
     transparent,
