Got the ClickToRevealKey component's styling working. There is some cleanup that needs to be done, but checking in what I've got.

--- a/packages/front-end/components/Settings/ClickToRevealKey.module.scss
+++ b/packages/front-end/components/Settings/ClickToRevealKey.module.scss
@@ -1,7 +1,11 @@
+.wrapper {
+  width: fit-content;
+  position: relative;
+}
+
 .hideText {
   color: transparent;
-  text-shadow: 0 0 5px #000;
-  position: absolute;
+  text-shadow: 0 0 5px #3b3b3b;
 }
 
 .button {
@@ -10,5 +14,5 @@
 }
 
 .buttonLeft {
-  left: 6%;
+  right: 50%;
 }
