Added better dark mode support.

--- a/packages/front-end/components/Settings/ClickToReveal.module.scss
+++ b/packages/front-end/components/Settings/ClickToReveal.module.scss
@@ -5,7 +5,7 @@
 
 .button {
   position: relative;
-  background-color: white;
+  background-color: var(--surface-background-color);
 }
 
 .buttonLeft {
