--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -556,6 +556,12 @@ pre {
 
 .gb-tooltip {
   border-radius: 5px;
+  white-space: normal;
+  color: var(--text-color-muted);
+  font-size: 13px;
+  text-transform: initial;
+  font-weight: normal;
+  font-style: italic;
 
   .arrow {
     position: absolute;
