--- a/packages/front-end/styles/theme.scss
+++ b/packages/front-end/styles/theme.scss
@@ -44,9 +44,8 @@
   --alert-danger-border-color: #f5c6cb;
   --alert-danger-color: #721c24;
 
-  --alert-premium-background: #{lighten(colors.$premium, 38%)};
-  --alert-premium-border-color: #{lighten(colors.$premium, 32%)};
-  --alert-premium-color: #{colors.$premium};
+  --alert-premium-background-gradient-1: #ede2ef;
+  --alert-premium-background-gradient-2: #ebf3fe;
 
   --border-color-100: #e0e2eb;
   --border-color-200: #dee2e6;
@@ -110,8 +109,8 @@
   --alert-danger-border-color: #{darken(#721c24, 0%)};
   --alert-danger-color: #f8d7da;
 
-  --alert-premium-background: #{darken(colors.$premium, 40%)};
-  --alert-premium-border-color: #{darken(colors.$premium, 36%)};
+  --alert-premium-background-gradient-1: #{darken(#ede2ef, 70%)};
+  --alert-premium-background-gradient-2: #{darken(#ebf3fe, 75%)};
 
   --border-color-100: #616161;
   --border-color-200: #424242;
