address feedback / disabled style

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1955,5 +1955,13 @@ td.disabled {
   background: var(--disabled-background);
   font-style: italic;
 }
+.gb-select--is-disabled {
+  .gb-select__control {
+    background-color: var(--disabled-background) !important;
+  }
+  .gb-select__single-value {
+    color: var(--text-color-muted) !important;
+  }
+}
 
 @import "./components/react-select.scss";
