cursor not-allowed

--- a/packages/front-end/styles/global.scss
+++ b/packages/front-end/styles/global.scss
@@ -1955,6 +1955,9 @@ td.disabled {
   background: var(--disabled-background);
   font-style: italic;
 }
+.gb-select-wrapper.disabled {
+  cursor: not-allowed;
+}
 .gb-select--is-disabled {
   .gb-select__control {
     background-color: var(--disabled-background) !important;
